--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="MarsRover.events.js"></script>
     <script>
         var mr = new MarsRover([12, 21], 'N');
-        mr.commands(['f']);
+        mr.commands(['butts']);
     </script>
 </head>
 
